<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AwesomeScreencast</string>
    <string name="go">Go screen!</string>
    <string name="go_png">PNG Frames (Nexus 7)</string>
    <string name="go_server">Go screen http feed ! - not png mode</string>
    <string name="server_live">accessible on http://your-ip:port/live.flv</string>
    <string name="menu_settings">Settings</string>
    <string name="cd">Start recording</string>

    <string name="behind_file_infos">File stream infos</string>
    <string name="behind_file_framerate">FrameRate (default: 24)</string>
    <string name="behind_file_save">Save</string>
    <string name="behind_server_infos">Server stream infos</string>
    <string name="behind_server_framerate">FrameRate (default: 24)</string>
    <string name="behind_server_video_width">Video Width</string>
    <string name="behind_server_video_height">Video Height</string>
    <string name="behind_server_listening_port">Port (default: 8090)</string>
    <string name="behind_server_maxconnections">MaxConnections (default: 5)</string>
    <string name="behind_server_save">Save</string>
    
    <string name="service_fault">An error occurred</string>
    <string name="service_recording">Recording video</string>
    <string name="service_streaming">Streaming video</string>
    <string name="service_waiting">Waiting for FFmpeg&#8230;</string>
    
    <string name="service_waiting_ffmpeg">Waiting for FFmpeg&#8230;</string>
    
    <string name="stop_recording_frames">Click to stop recording png frames</string>
    <string name="stop_recording_video">Click to stop recording video</string>
    <string name="stop_streaming_video">Click to stop streaming video</string>
    
    <string name="fc">folder chooser\n(long-press to select)</string>

</resources>