<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AwesomeScreencastActivity"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">
            
    <EditText
        android:id="@+src/file"
        android:inputType="textNoSuggestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    
    <Button
        android:id="@+src/fc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/fc"
        android:onClick="openFilechooser"/>
    
    <ImageView
        android:id="@+src/go"
        android:src="@drawable/record"
        android:contentDescription="@string/cd"
        android:textIsSelectable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"/>
    
    <Button
        android:id="@+src/go_png"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/go_png" />

    <TextView
        android:id="@+src/go_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawableBottom="@drawable/share"
        android:text="@string/server_live" />
    
</LinearLayout>